data biding - awards

--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
     <!-- Load JS files for the Handlebars Template -->
     <script src="./assets/js/util.js"></script>
 
-    <script src="./assets/js/top-topics.js"></script>
+    <script src="./assets/js/topics.js"></script>
     <script src="./assets/js/insights.js"></script>
+    <script src="./assets/js/awards.js"></script>
 
     <script src="./assets/js/view-all.js"></script>
     <script src="./assets/js/newsletter.js"></script>
@@ -177,123 +178,7 @@
         </div>
         <div class="section__content">
           <ul class="awards__list">
-            <li class="awards__item col tc--white">
-              <div
-                class="awards__bg bg--img"
-                style="--img-url: url(../../data/insights/thumbnail/test.jpg)"
-              ></div>
-              <div class="awards__wrapper col gap--m">
-                <div class="awards__name-box">
-                  <label class="awards__name">The Winner Of July</label>
-                </div>
-                <h3 class="awards__project serif">The Campus IFA 2020</h3>
-                <h4 class="awards__receiver">Modern Fusion Studio</h4>
-                <div
-                  class="awards__score donutChart"
-                  style="--donutChart-content: 8.8"
-                >
-                  <svg class="donutChart__circle-box">
-                    <circle
-                      class="donutChart__circle"
-                      cx="43"
-                      cy="43"
-                      r="43"
-                    ></circle>
-                    <circle
-                      class="donutChart__circle"
-                      cx="43"
-                      cy="43"
-                      r="43"
-                    ></circle>
-                  </svg>
-                  <div class="donutChart__content-box">
-                    <h4 class="donutChart__content">8.8</h4>
-                  </div>
-                </div>
-                <q class="awards__comment italic">
-                  "An awe-inspiring masterpiece that transcends the ordinary and
-                  elevates architecture to extraordinary heights.”
-                </q>
-              </div>
-            </li>
-            <li class="awards__item col tc--white">
-              <div
-                class="awards__bg bg--img"
-                style="--img-url: url(../../data/insights/thumbnail/test.jpg)"
-              ></div>
-              <div class="awards__wrapper col gap--m">
-                <div class="awards__name-box">
-                  <label class="awards__name">The Winner Of July</label>
-                </div>
-                <h3 class="awards__project serif">The Campus IFA 2020</h3>
-                <h4 class="awards__receiver">Modern Fusion Studio</h4>
-                <div
-                  class="awards__score donutChart"
-                  style="--donutChart-content: 8.8"
-                >
-                  <svg class="donutChart__circle-box">
-                    <circle
-                      class="donutChart__circle"
-                      cx="43"
-                      cy="43"
-                      r="43"
-                    ></circle>
-                    <circle
-                      class="donutChart__circle"
-                      cx="43"
-                      cy="43"
-                      r="43"
-                    ></circle>
-                  </svg>
-                  <div class="donutChart__content-box">
-                    <h4 class="donutChart__content">8.8</h4>
-                  </div>
-                </div>
-                <q class="awards__comment italic">
-                  "An awe-inspiring masterpiece that transcends the ordinary and
-                  elevates architecture to extraordinary heights.”
-                </q>
-              </div>
-            </li>
-            <li class="awards__item col tc--white">
-              <div
-                class="awards__bg bg--img"
-                style="--img-url: url(../../data/insights/thumbnail/test.jpg)"
-              ></div>
-              <div class="awards__wrapper col gap--m">
-                <div class="awards__name-box">
-                  <label class="awards__name">The Winner Of July</label>
-                </div>
-                <h3 class="awards__project serif">The Campus IFA 2020</h3>
-                <h4 class="awards__receiver">Modern Fusion Studio</h4>
-                <div
-                  class="awards__score donutChart"
-                  style="--donutChart-content: 8.8"
-                >
-                  <svg class="donutChart__circle-box">
-                    <circle
-                      class="donutChart__circle"
-                      cx="43"
-                      cy="43"
-                      r="43"
-                    ></circle>
-                    <circle
-                      class="donutChart__circle"
-                      cx="43"
-                      cy="43"
-                      r="43"
-                    ></circle>
-                  </svg>
-                  <div class="donutChart__content-box">
-                    <h4 class="donutChart__content">8.8</h4>
-                  </div>
-                </div>
-                <q class="awards__comment italic">
-                  "An awe-inspiring masterpiece that transcends the ordinary and
-                  elevates architecture to extraordinary heights.”
-                </q>
-              </div>
-            </li>
+            <!-- [awards data] -->
           </ul>
         </div>
       </section>
