data binding - insights trending cover img

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         </div>
         <div class="section__content">
           <ul class="topTopics__list topics__list">
-            <!-- [topic list] -->
+            <!-- [topics__list] -->
           </ul>
         </div>
       </section>
@@ -178,7 +178,7 @@
         </div>
         <div class="section__content">
           <ul class="awards__list">
-            <!-- [awards data] -->
+            <!-- [awards__list] -->
           </ul>
         </div>
       </section>
@@ -194,7 +194,6 @@
           <div class="section__content row gap--m">
             <div class="trending__main col gap--m">
               <div class="main__img section__img">
-                <img src="./data/insights/thumbnail/test.jpg" />
                 <div class="component-bookmark-add"></div>
               </div>
               <div class="topic__wrapper">
