data binding - insights trending cover title

--- a/index.html
+++ b/index.html
@@ -193,22 +193,18 @@
           </div>
           <div class="section__content row gap--m">
             <div class="trending__main col gap--m">
-              <div class="main__img section__img">
+              <div class="section__img">
+                <!-- [main__img] -->
                 <div class="component-bookmark-add"></div>
               </div>
               <div class="topic__wrapper">
-                <a href="#" class="topic ts--btn">topic</a>
+                <!-- [main topic] -->
               </div>
-              <a href="#" class="main__title ts--h2 serif hover--txt">
-                Revolutionary Sustainable Architecture Unveiled
-              </a>
+              <h2 class="main__title serif hover--txt">
+                <!-- [main title] -->
+              </h2>
               <p class="main__summary">
-                Architects reveal an innovative approach that integrates green
-                spaces, vertical gardens, and renewable energy systems, reducing
-                the carbon footprint. Biophilic principles enhance well-being
-                and productivity, creating an awe-inspiring urban landscape in
-                harmony with the environment. A promising step towards a
-                resilient and eco-friendly coexistence.
+                <!-- [main summary] -->
               </p>
               <div class="time__wrapper row gap--s v-center">
                 <h4 class="icon__time-wrapper">
