data binding - insights trending cover time

--- a/index.html
+++ b/index.html
@@ -210,9 +210,16 @@
                 <h4 class="icon__time-wrapper">
                   <i class="icon__time fa-regular fa-clock"></i>
                 </h4>
-                <p class="createdAt">1 day ago</p>
+                <p class="createdAt">
+                  <!-- [main createdAt] -->
+                </p>
                 <p class="separator">·</p>
-                <p class="ttr__box"><span class="ttr">1 min</span> read</p>
+                <p class="ttr__box">
+                  <span class="ttr">
+                    <!-- [main ttr] -->
+                  </span>
+                  read
+                </p>
               </div>
               <div class="author-row--icon v-center row gap--s">
                 <h4 class="icon__avatar-wrapper">
