data binidng - trending covoer - author

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     <script src="./assets/js/util.js"></script>
 
     <script src="./assets/js/topics.js"></script>
+    <script src="./assets/js/authors.js"></script>
     <script src="./assets/js/insights.js"></script>
     <script src="./assets/js/awards.js"></script>
 
@@ -225,7 +226,9 @@
                 <h4 class="icon__avatar-wrapper">
                   <i class="icon__avatar fa-regular fa-circle-user"></i>
                 </h4>
-                <p class="author__name">Eleanor Montgomery</p>
+                <p class="author__name">
+                  <!-- [main author name] -->
+                </p>
               </div>
             </div>
             <ul class="trending__list col gap--l">
