data binidng - trending list

--- a/index.html
+++ b/index.html
@@ -231,76 +231,7 @@
                 </p>
               </div>
             </div>
-            <ul class="trending__list col gap--l">
-              <li class="trending__item col gap--s">
-                <div class="topic__wrapper">
-                  <a href="#" class="topic ts--btn">topic</a>
-                </div>
-                <div class="title-row row gap--s">
-                  <p class="title-row__txt ts--h4 hover--txt serif">
-                    Headline level 3 text similar to body up to 2 lines
-                  </p>
-                  <div class="title-row__img section__img">
-                    <img src="./data/insights/thumbnail/test.jpg" />
-                    <div class="component-bookmark-add"></div>
-                  </div>
-                </div>
-                <p class="author-row ts--body-s text-gray row gap--s">
-                  By <span class="author__name">John Polansky</span>
-                </p>
-              </li>
-              <li class="trending__item col gap--s">
-                <div class="topic__wrapper">
-                  <a href="#" class="topic ts--btn">topic</a>
-                </div>
-                <div class="title-row row gap--s">
-                  <p class="title-row__txt ts--h4 hover--txt serif">
-                    Headline level 3 text similar to body up to 2 lines
-                  </p>
-                  <div class="title-row__img section__img">
-                    <img src="./data/insights/thumbnail/test.jpg" />
-                    <div class="component-bookmark-add"></div>
-                  </div>
-                </div>
-                <p class="author-row ts--body-s text-gray row gap--s">
-                  By <span class="author__name">John Polansky</span>
-                </p>
-              </li>
-              <li class="trending__item col gap--s">
-                <div class="topic__wrapper">
-                  <a href="#" class="topic ts--btn">topic</a>
-                </div>
-                <div class="title-row row gap--s">
-                  <p class="title-row__txt ts--h4 hover--txt serif">
-                    Headline level 3 text similar to body up to 2 lines
-                  </p>
-                  <div class="title-row__img section__img">
-                    <img src="./data/insights/thumbnail/test.jpg" />
-                    <div class="component-bookmark-add"></div>
-                  </div>
-                </div>
-                <p class="author-row ts--body-s text-gray row gap--s">
-                  By <span class="author__name">John Polansky</span>
-                </p>
-              </li>
-              <li class="trending__item col gap--s">
-                <div class="topic__wrapper">
-                  <a href="#" class="topic ts--btn">topic</a>
-                </div>
-                <div class="title-row row gap--s">
-                  <p class="title-row__txt ts--h4 hover--txt serif">
-                    Headline level 3 text similar to body up to 2 lines
-                  </p>
-                  <div class="title-row__img section__img">
-                    <img src="./data/insights/thumbnail/test.jpg" />
-                    <div class="component-bookmark-add"></div>
-                  </div>
-                </div>
-                <p class="author-row ts--body-s text-gray row gap--s">
-                  By <span class="author__name">John Polansky</span>
-                </p>
-              </li>
-            </ul>
+            <ul class="trending__list col gap--l"></ul>
           </div>
         </section>
 
