change editors pick data structure

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <script defer src="/assets/js/view-all.js"></script>
     <script defer src="/assets/js/newsletter.js"></script>
-    <script src="/assets/js/bookmark-add.js"></script>
+    <script defer src="/assets/js/bookmark-add.js"></script>
   </head>
 
   <body>
