load bookmark issue solved

--- a/index.html
+++ b/index.html
@@ -65,13 +65,11 @@
 
     <!-- Load JS files -->
     <script src="/assets/js/util.js"></script>
+
     <script src="/assets/js/topics.js"></script>
     <script src="/assets/js/insights.js"></script>
     <script src="/assets/js/awards.js"></script>
-
-    <script defer src="/assets/js/view-all.js"></script>
-    <script defer src="/assets/js/newsletter.js"></script>
-    <script defer src="/assets/js/bookmark-add.js"></script>
+    <script defer src="/assets/js/components.js"></script>
   </head>
 
   <body>
